added organiser image class and minor changes to kerala.html

--- a/committee.html
+++ b/committee.html
@@ -21,6 +21,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
+    <style>
+        .organizer {
+            border: #822468 solid 2px;
+            padding: 20px;
+            box-shadow: #ffda15 2px 2px;
+            margin-bottom: 20px;
+
+            height: 200px;
+        }
+
+        li>b {
+            color: #822468;
+            font-size: 1.2em;
+            font-weight: 600;
+        }
+    </style>
+
+</head>
 
 <body>
     <div class="page-wrapper">
@@ -253,56 +271,56 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <ul>
-                                <li>Abhay Phansikar, <i>Chair, IEEE Bombay Section</i></li>
-                                <li>Anthony Thomas, <i>CIO, Nissan Motor Corporation, Japan</i></li>
-                                <li>Arogyaswamy Paulraj, <i>Professor (Emeritus), Stanford University, USA</i></li>
-                                <li>Asheesh K Singh, <i>Chair, IEEE UP Section</i></li>
-                                <li>Celia Shahnaz, <i>Professor, BUET, Dhaka, Bangladesh</i></li>
-                                <li>Deepak Mathur, <i>IEEE Region 10 Director Elect, India</i></li>
-                                <li>Dinanath Kholkar, <i>Chair, IEEE Pune Section</i></li>
-                                <li>Fitri Yuli Zulkifli, <i>Chair, IEEE Indonesia Section</i></li>
-                                <li>Harish Mysore, <i>Director, GIEEE, Bangalore, India</i></li>
-                                <li>HR Mohan, <i>Editor, IEEE India Council Newsletter </i></li>
-                                <li>Jim Jefferies, <i>IEEE Past President, USA</i></li>
-                                <li>Jose M.F. Moura, <i>IEEE President & CEO, USA</i></li>
-                                <li>Karen Bartleson, <i>IEEE Past President, USA</i></li>
-                                <li>Keshav Bapat, <i>Chair, IEEE Bangalore Section</i></li>
-                                <li>Kris Gopalakrishnan, <i>Chairman, Axilor Ventures, India</i></li>
-                                <li>Kukjin CHUN, <i>Seoul National University, Korea</i></li>
-                                <li>Lawrence Wong, <i>Professor, National University of Singapore</i></li>
-                                <li>Maniklal Das, <i>Chair, IEEE Gujarat Section</i></li>
-                                <li>Michael Ong, <i>Chair, Conference Committee, IEEE Region 10</i></li>
-                                <li>Mini Thomas, <i>Director, NIT Trichy, India</i></li>
-                                <li>Norliza Mohd Noor, <i>Past Chair, IEEE Malaysia Section</i></li>
-                                <li>P.A Manoharan, <i>Chair, IEEE Madras Section</i></li>
+                            <li>Abhay Phansikar, <i>Chair, IEEE Bombay Section</i></li>
+                            <li>Anthony Thomas, <i>CIO, Nissan Motor Corporation, Japan</i></li>
+                            <li>Arogyaswamy Paulraj, <i>Professor (Emeritus), Stanford University, USA</i></li>
+                            <li>Asheesh K Singh, <i>Chair, IEEE UP Section</i></li>
+                            <li>Celia Shahnaz, <i>Professor, BUET, Dhaka, Bangladesh</i></li>
+                            <li>Deepak Mathur, <i>IEEE Region 10 Director Elect, India</i></li>
+                            <li>Dinanath Kholkar, <i>Chair, IEEE Pune Section</i></li>
+                            <li>Fitri Yuli Zulkifli, <i>Chair, IEEE Indonesia Section</i></li>
+                            <li>Harish Mysore, <i>Director, GIEEE, Bangalore, India</i></li>
+                            <li>HR Mohan, <i>Editor, IEEE India Council Newsletter </i></li>
+                            <li>Jim Jefferies, <i>IEEE Past President, USA</i></li>
+                            <li>Jose M.F. Moura, <i>IEEE President & CEO, USA</i></li>
+                            <li>Karen Bartleson, <i>IEEE Past President, USA</i></li>
+                            <li>Keshav Bapat, <i>Chair, IEEE Bangalore Section</i></li>
+                            <li>Kris Gopalakrishnan, <i>Chairman, Axilor Ventures, India</i></li>
+                            <li>Kukjin CHUN, <i>Seoul National University, Korea</i></li>
+                            <li>Lawrence Wong, <i>Professor, National University of Singapore</i></li>
+                            <li>Maniklal Das, <i>Chair, IEEE Gujarat Section</i></li>
+                            <li>Michael Ong, <i>Chair, Conference Committee, IEEE Region 10</i></li>
+                            <li>Mini Thomas, <i>Director, NIT Trichy, India</i></li>
+                            <li>Norliza Mohd Noor, <i>Past Chair, IEEE Malaysia Section</i></li>
+                            <li>P.A Manoharan, <i>Chair, IEEE Madras Section</i></li>
                         </ul>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <ul>
-                                <li>Preeti Bajaj, <i>Director, GH Raisoni College of Engineering, India</i></li>
-                                <li>Prerna Gaur, <i>Chair IEEE Delhi Section</i><br /></li>
-                                <li>Puneet K Mishra, <i>Secretary, IEEE India Council.</i><br /></li>
-                                <li>R.B. Jadeja, <i>Treasurer, IEEE India Council.</i><br /></li>
-                                <li>R.K. Shevgaonkar, <i>Vice Chancellor, Bennett University, India</i><br /></li>
-                                <li>R.V. Raja Kumar, <i>Director, IIT Bhubaneswar, India</i><br /></li>
-                                <li>Rajnish GUPTA, <i>Singapore Institute of Power & Gas, Singapore</i><br /></li>
-                                <li>Saji Gopinath, <i>CEO, Kerala Startup Mission, India</i><br /></li>
-                                <li>Shaikh Fattah, <i>Professor, BUET, Dhaka, Bangladesh</i><br /></li>
-                                <li>Sivaji Chakravarti, <i>Director, NIT Calicut, India</i><br /></li>
-                                <li>S. K. Varshney, <i>Chair, IEEE Kolkata Section</i><br /></li>
-                                <li>S.N. Singh, <i>Chair, IEEE India Council</i><br /></li>
-                                <li>Sujit K. Biswas, <i>Immediate Past Chair, IEEE Kolkata Section</i><br /></li>
-                                <li>Takako Hashimoto, <i>Secretary, IEEE Region 10</i><br /></li>
-                                <li>Thyagarajan K, <i>Professor, IIT Delhi, India</i><br /></li>
-                                <li>Tomonori Aoyama, <i>IEEE Chair, IEEE R10 LMAG</i><br /></li>
-                                <li>Toshio Fukuda, <i>IEEE President-Elect, Japan</i><br /></li>
-                                <li>U.B. Desai, <i>Director, IIT Hyderabad, India</i><br /></li>
-                                <li>Vincenco Piuri, <i>Professor, Universita' degli Studi di Milano, Italy</i><br /></li>
-                                <li>Y. P. Kosta, <i>Vice chancellor, Marwadi University</i><br /></li>
-                                <li>Zia Ahmed, <i>Vice Chair, IEEE Region 10</i><br /></li>
-                                <li>Zuhaina Zakaria, <i>Professor, Universiti Teknologi Mara, Malaysia</i><br /></li>
+                            <li>Preeti Bajaj, <i>Director, GH Raisoni College of Engineering, India</i></li>
+                            <li>Prerna Gaur, <i>Chair IEEE Delhi Section</i><br /></li>
+                            <li>Puneet K Mishra, <i>Secretary, IEEE India Council.</i><br /></li>
+                            <li>R.B. Jadeja, <i>Treasurer, IEEE India Council.</i><br /></li>
+                            <li>R.K. Shevgaonkar, <i>Vice Chancellor, Bennett University, India</i><br /></li>
+                            <li>R.V. Raja Kumar, <i>Director, IIT Bhubaneswar, India</i><br /></li>
+                            <li>Rajnish GUPTA, <i>Singapore Institute of Power & Gas, Singapore</i><br /></li>
+                            <li>Saji Gopinath, <i>CEO, Kerala Startup Mission, India</i><br /></li>
+                            <li>Shaikh Fattah, <i>Professor, BUET, Dhaka, Bangladesh</i><br /></li>
+                            <li>Sivaji Chakravarti, <i>Director, NIT Calicut, India</i><br /></li>
+                            <li>S. K. Varshney, <i>Chair, IEEE Kolkata Section</i><br /></li>
+                            <li>S.N. Singh, <i>Chair, IEEE India Council</i><br /></li>
+                            <li>Sujit K. Biswas, <i>Immediate Past Chair, IEEE Kolkata Section</i><br /></li>
+                            <li>Takako Hashimoto, <i>Secretary, IEEE Region 10</i><br /></li>
+                            <li>Thyagarajan K, <i>Professor, IIT Delhi, India</i><br /></li>
+                            <li>Tomonori Aoyama, <i>IEEE Chair, IEEE R10 LMAG</i><br /></li>
+                            <li>Toshio Fukuda, <i>IEEE President-Elect, Japan</i><br /></li>
+                            <li>U.B. Desai, <i>Director, IIT Hyderabad, India</i><br /></li>
+                            <li>Vincenco Piuri, <i>Professor, Universita' degli Studi di Milano, Italy</i><br /></li>
+                            <li>Y. P. Kosta, <i>Vice chancellor, Marwadi University</i><br /></li>
+                            <li>Zia Ahmed, <i>Vice Chair, IEEE Region 10</i><br /></li>
+                            <li>Zuhaina Zakaria, <i>Professor, Universiti Teknologi Mara, Malaysia</i><br /></li>
                         </ul>
-                        </div>
+                    </div>
                 </div>
                 <br />
                 <div class="sec-title text-left">
@@ -318,7 +336,9 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <ul>
-                                        <li><b>Honorary Chair</b><br />
+                                        <li>
+                                            <!-- <img src="./images/kush.jpg" alt="" class="organizer"><br> -->
+                                            <b>Honorary Chair</b><br />
                                             Akinori Nishihara, 2018-2019<br />
                                             <i>IEEE Region 10 Director, Japan</i></li>
                                         <li><b>General Chair</b><br />
