--- a/kerala.html
+++ b/kerala.html
@@ -22,6 +22,20 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
+     <style>
+         h3 {
+             color: #822468;
+         }
+
+         /* .image-centre {
+             width: 500px;
+         } */
+
+         /* .image-side {
+             height: 200px;
+         } */
+     </style>
+
  </head>
 
  <body>
@@ -216,17 +230,17 @@
                      </p>
                      <div class="row">
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="http://www.beyondtravels.com/admin/assets/images/banner3.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-centre"
                                      src="https://www.keralatourism.org/images/destination/large/fort_kochi20131031104449_422_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/destination/large/thenmala_eco_tourism20131031121405_41_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
@@ -243,17 +257,17 @@
                          year.</p>
                      <div class="row">
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/destination/large/chembra_peak_in_wayanad20131119171528_508_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-centre"
                                      src="https://www.keralatourism.org/images/destination/large/neelakurinji_munnar20131031111521_366_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/destination/large/neelakurinji_bloom20131031111459_377_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
@@ -271,17 +285,17 @@
                      </p>
                      <div class="row">
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/houseboat-1024x576.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-centre"
                                      src="https://www.keralatourism.org/images/destination/large/bekal20131119173955_259_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/destination/large/lighthouse_beach_kovalam20131031110741_432_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
@@ -310,17 +324,17 @@
                      </p>
                      <div class="row">
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/destination/large/vaidyaratnam_ayurveda_museum_in_thrissur20140604095737_586_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-centre"
                                      src="https://www.keralatourism.org/images/destination/large/vaidyaratnam_ayurveda_museum_in_thrissur20140604095737_586_2.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/destination/large/vaidyaratnam_ayurveda_museum_in_thrissur20140604095737_586_3.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
@@ -348,71 +362,72 @@
                      </p>
                      <div class="row">
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/destination/large/chettikulangara_bhagavathy_temple_mavelikkara20131031103448_68_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-centre"
                                      src="https://www.keralatourism.org/images/destination/large/sree_padmanabhaswamy_temple_thiruvananthapuram20131031115717_13_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                          <div class="col-lg-4">
-                             <p style="text-align:center;"><img
+                             <p style="text-align:center;"><img class="image-side"
                                      src="https://www.keralatourism.org/images/festivals/large/20170330115924_321_1.jpg"
                                      style="max-width:90%;padding:20px;"></p>
                          </div>
                      </div>
                  </div>
-                </div>
+             </div>
              <!--End pagewrapper-->
              <!--Scroll to top-->
              <div class="scroll-to-top scroll-to-target" data-target="html"><span class="icon fa fa-arrow-up"></span>
              </div>
-        </section>
-    <!-- Main Footer -->
-    <footer class="main-footer padding-top">
+         </section>
+         <!-- Main Footer -->
+         <footer class="main-footer padding-top">
 
-        <!--Footer Bottom-->
-        <div class="footer-bottom">
-            <div class="auto-container clearfix">
-                <div class="row">
-                    <div class="col-md-4 col-sm-4 col-xs-12 text-left">
-                        <i>Powered by</i>:
-                        <a href="http://www.rpsonline.com.sg" class="expert-link" style="font-weight: initial;">Research
-                            Publishing Services</a>
-                    </div><!-- /.col-md-4 -->
+             <!--Footer Bottom-->
+             <div class="footer-bottom">
+                 <div class="auto-container clearfix">
+                     <div class="row">
+                         <div class="col-md-4 col-sm-4 col-xs-12 text-left">
+                             <i>Powered by</i>:
+                             <a href="http://www.rpsonline.com.sg" class="expert-link"
+                                 style="font-weight: initial;">Research
+                                 Publishing Services</a>
+                         </div><!-- /.col-md-4 -->
 
-                    <div class="col-md-4 col-sm-4 col-xs-12">
+                         <div class="col-md-4 col-sm-4 col-xs-12">
 
-                    </div>
-                    <!-- /.col-md-4 -->
-
-
-
-                    <div class="col-md-4 col-sm-4 col-xs-12 text-right">
-                        <div class="copyright-text">&copy; 2019 TENCON 2019. All rights reserved. </div>
-                    </div>
-
-                    <!-- /.col-md-4 -->
+                         </div>
+                         <!-- /.col-md-4 -->
 
 
-                </div><!-- /.row -->
-            </div>
-        </div>
-    </footer>
-    <!-- End Main Footer -->
-             <script src="js/jquery.js"></script>
-             <script src="js/bootstrap.min.js"></script>
-             <script src="js/jquery-ui.js"></script>
-             <script src="js/jquery.fancybox.js"></script>
-             <script src="js/owl.js"></script>
-             <script src="js/appear.js"></script>
-             <script src="js/wow.js"></script>
-             <script src="js/bootstrap-select.min.js"></script>
-             <script src="plugins/language-switcher/jquery.polyglot.language.switcher.js"></script>
-             <script src="js/jquery.magnific-popup.min.js"></script>
-             <script src="js/script.js"></script>
+
+                         <div class="col-md-4 col-sm-4 col-xs-12 text-right">
+                             <div class="copyright-text">&copy; 2019 TENCON 2019. All rights reserved. </div>
+                         </div>
+
+                         <!-- /.col-md-4 -->
+
+
+                     </div><!-- /.row -->
+                 </div>
+             </div>
+         </footer>
+         <!-- End Main Footer -->
+         <script src="js/jquery.js"></script>
+         <script src="js/bootstrap.min.js"></script>
+         <script src="js/jquery-ui.js"></script>
+         <script src="js/jquery.fancybox.js"></script>
+         <script src="js/owl.js"></script>
+         <script src="js/appear.js"></script>
+         <script src="js/wow.js"></script>
+         <script src="js/bootstrap-select.min.js"></script>
+         <script src="plugins/language-switcher/jquery.polyglot.language.switcher.js"></script>
+         <script src="js/jquery.magnific-popup.min.js"></script>
+         <script src="js/script.js"></script>
 
 
  </body>
