--- a/index.html
+++ b/index.html
@@ -304,28 +304,30 @@
 
 
         <section class="intro-news">
-            <div class="fluid-container">
+            <div class="container">
                 <div class="row clearfix">
                     <!-- news and updates Column -->
                     <div class="list-column col-md-4 col-sm-12 col-xs-12 col-lg-push-8" style="min-height: 100vh;">
-                        <div class="inner-column news-block" style="height: 100vh;overflow-y: scroll;">
+                        <div class="inner-column news-block" style="height: 100vh;
+                        overflow-y: scroll;
+                        border: 3px solid #81226a;
+                        box-shadow: 6px 8px #ffe36d;">
                             <!-- news and update Block -->
-                            <h2 style="color: white;text-decoration: underline;text-transform: uppercase;">NEWS AND
-                                UPDATES</h2><br>
+                            <h2 style="color: black;text-transform: uppercase;">NEWS AND UPDATES</h2><br>
 
-                            <h4><a href="./detailed_program.html">Final Program with Paper Presentation Schedule Updated</a></h4><br>
+                            <h4><a href="./detailed_program.html">- Final Program with Paper Presentation Schedule Updated</a></h4><br>
 
-                            <h4><a href="./itrack.html">Special Industrial Track (SIT) Programme Overview &amp; Registration Updated</a></h4><br>
-                            <h4><a href="./accommodation.html">Accommodation Details Updated</a></h4><br>
+                            <h4><a href="./itrack.html">- Special Industrial Track (SIT) Programme Overview &amp; Registration Updated</a></h4><br>
+                            <h4><a href="./accommodation.html">- Accommodation Details Updated</a></h4><br>
 
-                            <h4><a href="./reg.html">Registration System is Open</a></h4><br>
+                            <h4><a href="./reg.html">- Registration System is Open</a></h4><br>
 
-                            <h4><a href="TENCON 2019_Sponsorship Brochure.pdf">Sponsorship &amp; Exhibition Opportunities</a></h4>
+                            <h4><a href="TENCON 2019_Sponsorship Brochure.pdf">- Sponsorship &amp; Exhibition Opportunities</a></h4>
                             <p>Sponsorship Opportunities updates. Please refer above page.</p><br>
 
-                            <h4><a href="./tutorial.html">Tutorials Updated</a></h4><br>
+                            <h4><a href="./tutorial.html">- Tutorials Updated</a></h4><br>
 
-                            <h4><a href="https://drive.google.com/open?id=1ep-_eGr272By22_edU1h1x51SH-N9eJ0">Tutorial allotment Please check you are able to view contents of link</a></h4>
+                            <h4><a href="https://drive.google.com/open?id=1ep-_eGr272By22_edU1h1x51SH-N9eJ0">- Tutorial allotment Please check you are able to view contents of link</a></h4>
 
                         </div>
                     </div>
@@ -379,55 +381,6 @@
                 </div>
             </div>
         </section>
-
-        <section class="fun-fact-style-one" style="background-image: url(images/bgs.jpg);">
-            <div class="container">
-                <div class="sec-title light">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-12">
-
-                            <h2>Important Dates</h2>
-
-                        </div><!-- /.col-md-4 -->
-
-                    </div><!-- /.row -->
-                </div><!-- /.sec-title -->
-
-                <p>Paper submission to the regular tracks is closed. However papers can be submitted to any of the 23
-                    special sessions of the conference till 30-th June". For more details,<br> click here: <a
-                        href="http://www.tencon2019.org/special_sessions.html">tencon2019.org/special_sessions.html</a>
-                </p><br>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-
-                    <div class="single-fun-fact-style-one">
-
-                        <h3><span class="counta">Papers Submission</span></h3>
-                        <b><span class="countb">Submission Deadline</span></b> : <span class="countc"><strike>April
-                                20,
-                                2019</strike>
-                            <font color="red"><b>
-                                    <!-- Extended: 20-May-2019 -->CLOSED</b></font>
-                        </span><br />
-                        <b><span class="countb">Paper Notification Date</span></b> : <span class="countc">July 20,
-                            2019</span><br />
-                        <b><span class="countb">Camera-Ready</span></b> : <span class="countc">August 30,
-                            2019</span><br />
-                    </div><!-- /.single-fun-fact-style-one -->
-                </div><!-- /.col-md-3 -->
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <div class="single-fun-fact-style-one">
-
-                        <h3><span class="counta">Special Sessions</span></h3>
-                        <b><span class="countb">Paper Submission Deadline Extended</span></b> : <span
-                            class="countc"><strike>15-July-2019</strike>
-                            <font color="red"><b> CLOSED</b></font>
-                        </span><br />
-                        <b><span class="countb">Notification</span></b> : <span class="countc">30-July-2019</span><br />
-
-                    </div><!-- /.single-fun-fact-style-one -->
-                </div><!-- /.col-md-3 -->
-    </div><!-- /.auto-container -->
-    </section><!-- /.fun-fact-style-one -->
 
     <!-- Contact Map Section -->
     <section class="services-style-one">
