--- a/detailed_program.html
+++ b/detailed_program.html
@@ -142,7 +142,7 @@
 
                              <div class="navbar-collapse collapse clearfix">
                                  <ul class="navigation clearfix">
-                                     <li><a href="index.html">Home</a></li>
+                                     <!-- <li><a href="index.html">Home</a></li> -->
                                      <li class="dropdown"><a href="about.html">About</a>
                                          <ul>
                                              <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -203,10 +203,11 @@
              <div class="container">
                  <div class="sec-title text-left">
                      <h2>Detailed Program</h2><br>                       
-                         <a href="Programme-Schedule-FA.pdf" class="theme-btn btn-style-one">Download Detailed Program</a>
                      
 
                      <img src="./images/technical-program-fa.jpg" /> <br>
+                     <a href="Programme-Schedule-FA.pdf" class="theme-btn btn-style-one">Download Detailed Program</a>
+
 
                      <!--
 <img src="./images/d23.jpg" /> <br>
