--- a/venue.html
+++ b/venue.html
@@ -247,7 +247,7 @@
                                      <li><span>Website : </span><a class="url"
                                              href="https://www.hyatt.com/en-US/hotel/india/grand-hyatt-kochi-bolgatty/cokgh">hyatt.com/en-US/hotel/india/grand-hyatt-kochi-bolgatty/cokgh</a>
                                      </li>
-                                     <li><span>Phone : </span><a href="tel:+914842661234">+91 484 266 1234</a></li>
+                                     <li><span>Phone : </span><a class="url" href="tel:+914842661234">+91 484 266 1234</a></li>
                                  </ul>
                              </div>
                          </div>
