--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active slide-1"
-                    style="background-image: url(images/slider/Tencon-venue.webp);background-position: center center;">
+                    style="background-image: linear-gradient(0deg,rgba(16, 16, 16, 0.64),rgba(0, 0, 0, 0.63)),url(images/slider/Tencon-venue.webp);background-position: center center;">
 
                     <div class="carousel-caption">
                         <div class="container">
@@ -259,7 +259,7 @@
                 </div>
 
                 <div class="item slide-2"
-                    style="background-image: url(images/slider/munnar.jpg);background-position: center center;">
+                    style="background-image: linear-gradient(0deg,rgba(16, 16, 16, 0.34),rgba(0, 0, 0, 0.34)),url(images/slider/Munnar.jpg);background-position: center center;">
 
                     <div class="carousel-caption">
                         <div class="container">
@@ -307,12 +307,11 @@
             <div class="container">
                 <div class="row clearfix">
                     <!-- news and updates Column -->
-                    <div class="list-column col-md-4 col-sm-12 col-xs-12 col-lg-push-8" style="min-height: 100vh;">
+                    <!-- <div class="list-column col-md-4 col-sm-12 col-xs-12 col-lg-push-8" style="min-height: 100vh;">
                         <div class="inner-column news-block" style="height: 100vh;
                         overflow-y: scroll;
                         border: 3px solid #81226a;
                         box-shadow: 6px 8px #ffe36d;">
-                            <!-- news and update Block -->
                             <h2 style="color: black;text-transform: uppercase;">NEWS AND UPDATES</h2><br>
 
                             <h4><a href="./detailed_program.html">- Final Program with Paper Presentation Schedule Updated</a></h4><br>
@@ -330,9 +329,9 @@
                             <h4><a href="https://drive.google.com/open?id=1ep-_eGr272By22_edU1h1x51SH-N9eJ0">- Tutorial allotment Please check you are able to view contents of link</a></h4>
 
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Info Column -->
-                    <div class="info-column col-md-8 col-sm-12 col-xs-12 col-lg-pull-4" style="padding: 30px;">
+                    <div class="info-column col-md-10 col-sm-12 col-xs-12" style="padding: 30px;">
                         <div class="sec-title">
 
                             <h2 style="text-decoration-color:yellow">Technology, Knowledge & Society</h2>
@@ -385,13 +384,12 @@
     <!-- Contact Map Section -->
     <section class="services-style-one">
         <div class="container">
-            <div class="sec-title text-center">
-                <h2>Sponsors & Exhibitors</h2><br>
+            
                 <center>
                     <div class="container">
                             <div class="row"><br><br>
                                 <div class="sec-title text-center">
-                                    <h4>ORGANISED BY</h4></div>
+                                    <h2>Organised By</h2></div>
                                     <div class="col-md-4" style="padding-top:50px;">
                                         <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks"
                                             style="height: 50px;">
@@ -401,12 +399,13 @@
                                             style="height: 50px;">
                                     </div>
                                     <div class="col-md-4" style="padding-top:50px;">
-                                        <img class="sponser-logo" src="images/logo-ieee.jpg" alt="CDT" style="height: 50px;">
+                                        <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 70px;">
                                     </div>
                                 </div>
                                 <br>
                         <br>
-                        <br>
+                        <br><div class="sec-title text-center">
+                                <h2>Sponsors & Exhibitors</h2><br></div>
                         <div class="row">
                             <h3>TITLE SPONSOR</h3>
                             <div class="col">
