bg image name typo

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </div>
 
                 <div class="item slide-2"
-                    style="background-image: linear-gradient(0deg,rgba(16, 16, 16, 0.34),rgba(0, 0, 0, 0.34)),url(images/slider/Munnar.jpg);background-position: center center;">
+                    style="background-image: linear-gradient(0deg,rgba(16, 16, 16, 0.34),rgba(0, 0, 0, 0.34)),url(images/slider/munnar.jpg);background-position: center center;">
 
                     <div class="carousel-caption">
                         <div class="container">
