removed unused js

--- a/nissan.html
+++ b/nissan.html
@@ -294,13 +294,13 @@ Lince, an ardent advocate (evangelist) of ERM and BCM practices, has over 19 yea
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/bootstrap-select.min.js"></script>
+<!--<script src="js/jquery.fancybox.js"></script>-->
+<!--<script src="js/owl.js"></script>-->
+<!--<script src="js/appear.js"></script>-->
+<!--<script src="js/wow.js"></script>-->
+<!--<script src="js/bootstrap-select.min.js"></script>-->
 <script src="plugins/language-switcher/jquery.polyglot.language.switcher.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
+<!--<script src="js/jquery.magnific-popup.min.js"></script>-->
 <script src="js/script.js"></script>
 
 
