--- a/submissions10-04.html
+++ b/submissions10-04.html
@@ -209,11 +209,11 @@ professional misconduct. Papers will be screened for plagiarism and when identif
 
 <ul><li>1. Access the website of IEEE PDF eXpress: <a class="url" href="www.pdf-express.org">www.pdf-express.org</a></li>
 <li>2. Enter the conference ID: <font color="red"><b>47323XP</b></font></li>
-<li>3. If you do not have an account select "New Users - Click Here"ù nd follow the steps to register. Otherwise, sign in with your email address and password.</li>
-<li>4. Select "Create New Title"ù or every full paper.</li>
-<li>5. Among the data that identify their work and select "Submit File for Checking or Converting"ù./li>
+<li>3. If you do not have an account select "New Users - Click Here"ÔøΩ nd follow the steps to register. Otherwise, sign in with your email address and password.</li>
+<li>4. Select "Create New Title"ÔøΩ or every full paper.</li>
+<li>5. Among the data that identify their work and select "Submit File for Checking or Converting"ÔøΩ./li>
 <li>6. Select "Browse" nd find the file. The selected file may be a PDF for compatibility or file in another format to be converted to PDF. For more details go to the website http://www.pdf-express.org/frhelp.asp.</li>
-<li>7. Select "Upload File"ù. ou will receive confirmation that the load was successful through an email.</li>
+<li>7. Select "Upload File"ÔøΩ. ou will receive confirmation that the load was successful through an email.</li>
 <li>8. You will receive an email with your new PDF file, PDF verified or converted by the IEEE PDF eXpress system. If a PDF file is up to verify, the email will indicate whether it passed or failed.</li>
 </p>
 
@@ -275,13 +275,13 @@ professional misconduct. Papers will be screened for plagiarism and when identif
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/bootstrap-select.min.js"></script>
+<!--<script src="js/jquery.fancybox.js"></script>-->
+<!--<script src="js/owl.js"></script>-->
+<!--<script src="js/appear.js"></script>-->
+<!--<script src="js/wow.js"></script>-->
+<!--<script src="js/bootstrap-select.min.js"></script>-->
 <script src="plugins/language-switcher/jquery.polyglot.language.switcher.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
+<!--<script src="js/jquery.magnific-popup.min.js"></script>-->
 <script src="js/script.js"></script>
 
 
