--- a/index-original.html
+++ b/index-original.html
@@ -627,13 +627,13 @@ TENCON 2019 at God’s Own Country is expected to bring together researchers, ed
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/bootstrap-select.min.js"></script>
+<!--<script src="js/jquery.fancybox.js"></script>-->
+<!--<script src="js/owl.js"></script>-->
+<!--<script src="js/appear.js"></script>-->
+<!--<script src="js/wow.js"></script>-->
+<!--<script src="js/bootstrap-select.min.js"></script>-->
 <script src="plugins/language-switcher/jquery.polyglot.language.switcher.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
+<!--<script src="js/jquery.magnific-popup.min.js"></script>-->
 <script src="js/script.js"></script>
 
 
