--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <!-- Contact Map Section -->
     <section class="services-style-one">
         <div class="container">
-            
+
                 <center>
                     <div class="container">
                             <div class="row"><br><br>
@@ -563,13 +563,13 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-ui.js"></script>
-    <script src="js/jquery.fancybox.js"></script>
-    <script src="js/owl.js"></script>
-    <script src="js/appear.js"></script>
-    <script src="js/wow.js"></script>
-    <script src="js/bootstrap-select.min.js"></script>
+    <!--<script src="js/jquery.fancybox.js"></script>-->
+    <!--<script src="js/owl.js"></script>-->
+    <!--<script src="js/appear.js"></script>-->
+    <!--<script src="js/wow.js"></script>-->
+    <!--<script src="js/bootstrap-select.min.js"></script>-->
     <!-- <script src="plugins/language-switcher/jquery.polyglot.language.switcher.js"></script> -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <!--<script src="js/jquery.magnific-popup.min.js"></script>-->
     <script src="js/script.js"></script>
 
 
