--- a/itrack25-09.html
+++ b/itrack25-09.html
@@ -482,13 +482,13 @@ This one day registration is applicable only for attending participating in the 
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/bootstrap-select.min.js"></script>
+<!--<script src="js/jquery.fancybox.js"></script>-->
+<!--<script src="js/owl.js"></script>-->
+<!--<script src="js/appear.js"></script>-->
+<!--<script src="js/wow.js"></script>-->
+<!--<script src="js/bootstrap-select.min.js"></script>-->
 <script src="plugins/language-switcher/jquery.polyglot.language.switcher.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
+<!--<script src="js/jquery.magnific-popup.min.js"></script>-->
 <script src="js/script.js"></script>
 
 
