center align slide caption

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
-                                <div class="content ">
+                                <div class="content text-center">
                                     <div class="main-banner-content-two">
                                         <h3 class="title" data-animation="animated fadeInUp">A premier Technology
                                             conference of IEEE R10 in</h3>
