--- a/sponsors.html
+++ b/sponsors.html
@@ -229,7 +229,7 @@
                             <div class="row">
                                 <h3>TITLE SPONSOR</h3>
                                 <div class="col">
-                                    <img class="sponser-logo" src="./images/nissan.jpg" alt="nissan">
+                                    <img class="sponser-logo" src="./images/nissan.jpg" alt="nissan" style="height: 215px;">
                                 </div>
                             </div>
                             <br>
@@ -238,11 +238,11 @@
                             <div class="row">
                                 <h3>GOLD SPONSOR</h3>
                                 <div class="col-md-6 col-sm-6" style="padding-top: 25px;">
-                                    <img class="sponser-logo" src="./images/nest.jpg" alt="nest" style="height: 100px;">
+                                    <img class="sponser-logo" src="./images/nest.jpg" alt="nest" style="height: 125px;">
                                 </div>
                                 <div class="col-md-6 col-sm-6" style="padding-top: 25px;">
                                     <img class="sponser-logo" src="./images/KSITM.png" alt="KSITM"
-                                        style="height: 100px;">
+                                        style="height: 125px;">
                                 </div>
                             </div>
                             <br>
@@ -280,7 +280,7 @@
                                 <h3>BRONZE SPONSERS</h3>
                                 <div class="col-md-3" style="padding-top:50px;">
                                     <img class="sponser-logo" src="./images/mentor.png" alt="mentor"
-                                        style="height: 50px;">
+                                        style="height: 40px;">
                                 </div>
                                 <div class="col-md-3" style="padding-top:50px;">
                                     <img class="sponser-logo" src="./images/ust.png" alt="ust" style="height: 50px;">
