--- a/reg.html
+++ b/reg.html
@@ -241,7 +241,7 @@
 
 
         <section class="services-style-one">
-            <div class="auto-container">
+            <div class="container">
                 <div class="sec-title text-left">
                     <h2>Registration Fee</h2><br>
                     <p align="right">
