sticky menu current page highlight fix

--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -140,7 +140,7 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li><a href="index.html">Home</a></li>
+                                    <!-- <li><a href="index.html">Home</a></li> -->
                                     <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
                                             <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -153,7 +153,6 @@
                                     </li>
 
                                     <li><a href="committee.html">Committee</a></li>
-                                    <li><a href="speakers.html">Speakers</a></li>
 
                                     <!-- <li><a href="keydates.html">Key Dates</a></li> -->
 
@@ -165,11 +164,19 @@
                                             <li><a href="presentation_guidelines.html">Presentation Guidelines </a></li>
                                         </ul>
                                     </li>
+                                    <li><a href="speakers.html">Speakers</a></li>
+
                                     <li class="dropdown"><a href="about.html">Program</a>
                                         <ul>
                                             <li><a href="overview.html">Overview </a></li>
                                             <li><a href="detailed_program.html">Detailed Program</a></li>
                                             <li><a href="special_sessions.html">Special Sessions</a></li>
+                                            <li class="dropdown"><a href="#">Tracks</a>
+                                                <ul>
+                                                    <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
+                                                    <li><a href="htrack.html">Humanitarian Activities Track</a></li>
+                                                </ul>
+                                            </li>
                                             <li><a href="workshops.html">Workshops</a></li>
                                             <li><a href="tutorial.html">Tutorial</a></li>
                                             <li><a href="social.html">Social Program/Tour</a></li>
