--- a/tutorial.html
+++ b/tutorial.html
@@ -160,8 +160,8 @@
                                             <li><a href="presentation_guidelines.html">Presentation Guidelines </a></li>
                                         </ul>
                                     </li>
-                                    <li class="current"><a href="speakers.html">Speakers</a></li>
-                                    <li class="dropdown"><a href="#">Program</a>
+                                    <li><a href="speakers.html">Speakers</a></li>
+                                    <li class="current dropdown"><a href="#">Program</a>
                                         <ul>
                                             <li><a href="overview.html">Overview </a></li>
                                             <li><a href="detailed_program.html">Detailed Program</a></li>
