--- a/detailed_program.html
+++ b/detailed_program.html
@@ -166,8 +166,8 @@
                                              </li>
                                          </ul>
                                      </li>
-                                     <li class="current"><a href="speakers.html">Speakers</a></li>
-                                     <li class="dropdown"><a href="#">Program</a>
+                                     <li><a href="speakers.html">Speakers</a></li>
+                                     <li class="current dropdown"><a href="#">Program</a>
                                          <ul>
                                              <li><a href="overview.html">Overview </a></li>
                                              <li><a href="detailed_program.html">Detailed Program</a></li>
