--- a/social.html
+++ b/social.html
@@ -135,7 +135,7 @@
 
                         <div class="navbar-collapse collapse clearfix">
                             <ul class="navigation clearfix">
-                                <li><a href="index.html">Home</a></li>
+                                <!-- <li><a href="index.html">Home</a></li> -->
 <li class="dropdown"><a href="about.html">About</a>
 <ul>
 <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -158,8 +158,8 @@
 <li><a href="presentation_guidelines.html">Presentation Guidelines </a></li>
 </ul>
 </li>
-<li class="current"><a href="speakers.html">Speakers</a></li>
-<li class="dropdown"><a href="#">Program</a>
+<li><a href="speakers.html">Speakers</a></li>
+<li class="current dropdown"><a href="#">Program</a>
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
@@ -202,19 +202,9 @@
 <br><br>
 <br><br>
 <br><br>
+
 <br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
+
 
 
                 </div>
