--- a/tencon.html
+++ b/tencon.html
@@ -159,7 +159,7 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <li class="current"><a href="index.html">Home</a></li>
+                                    <!-- <li class="current"><a href="index.html">Home</a></li> -->
 
                                     <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
@@ -198,6 +198,12 @@
 
                                     </li>
                                     <li><a href="special_sessions.html">Special Sessions</a></li>
+                                    <li class="dropdown"><a href="#">Tracks</a>
+                                        <ul>
+                                            <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
+                                            <li><a href="htrack.html">Humanitarian Activities Track</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="about.html">Registration</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
