added non webp support

--- a/venue.html
+++ b/venue.html
@@ -214,7 +214,11 @@
                      <div class="upper-box">
 
                          <div class="image">
-                             <img src="images/slider/Tencon-venue.webp" alt="">
+                                <picture>
+                                        <source srcset="images/slider/tencon-venue.webp" type="image/webp">
+                                        <source srcset="images/slider/tencon-venue.jpg" type="image/jpeg"> 
+                                        <img src="images/slider/Tencon-venue.webp" alt="">
+                                      </picture>
                          </div>
                      </div>
 <br>
