typos and minor fixes

--- a/index.html
+++ b/index.html
@@ -392,14 +392,14 @@
                                     <h2>Organised By</h2></div>
                                     <div class="col-md-4" style="padding-top:50px;">
                                         <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks"
-                                            style="height: 50px;">
+                                            style="height: 65px;">
                                     </div>
                                     <div class="col-md-4" style="padding-top:50px;">
                                         <img class="sponser-logo" src="images/logo-3.jpg" alt="IEEE SA"
-                                            style="height: 50px;">
+                                            style="height: 65px;">
                                     </div>
                                     <div class="col-md-4" style="padding-top:50px;">
-                                        <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 70px;">
+                                        <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 80px;">
                                     </div>
                                 </div>
                                 <br>
@@ -416,7 +416,7 @@
                         <hr>
                         <br>
                         <div class="row">
-                            <h3>GOLD SPONSOR</h3>
+                            <h3>GOLD SPONSORS</h3>
                             <div class="col-md-6 col-sm-6" style="padding-top: 25px;">
                                 <img class="sponser-logo" src="./images/nest.jpg" alt="nest" style="height: 125px;">
                             </div>
@@ -429,7 +429,7 @@
                         <hr>
                         <br>
                         <div class="row">
-                            <h3>SILVER SPONSERS</h3>
+                            <h3>SILVER SPONSORS</h3>
                             <div class="col-md-4" style="padding-top:45px;">
                                 <img class="sponser-logo" src="./images/tpl.jpg" alt="tpl" style="height: 30px;">
                             </div>
@@ -457,7 +457,7 @@
                         <hr>
                         <br>
                         <div class="row">
-                            <h3>BRONZE SPONSERS</h3>
+                            <h3>BRONZE SPONSORS</h3>
                             <div class="col-md-3" style="padding-top:50px;">
                                 <img class="sponser-logo" src="./images/mentor.png" alt="mentor"
                                     style="height: 40px;">
