--- a/sponsors.html
+++ b/sponsors.html
@@ -242,7 +242,7 @@
                             <hr>
                             <br>
                             <div class="row">
-                                <h3>GOLD SPONSOR</h3>
+                                <h3>GOLD SPONSORS</h3>
                                 <div class="col-md-6 col-sm-6" style="padding-top: 25px;">
                                     <img class="sponser-logo" src="./images/nest.jpg" alt="nest" style="height: 125px;">
                                 </div>
@@ -255,7 +255,7 @@
                             <hr>
                             <br>
                             <div class="row">
-                                <h3>SILVER SPONSERS</h3>
+                                <h3>SILVER SPONSORS</h3>
                                 <div class="col-md-4" style="padding-top:45px;">
                                     <img class="sponser-logo" src="./images/tpl.jpg" alt="tpl" style="height: 30px;">
                                 </div>
@@ -283,7 +283,7 @@
                             <hr>
                             <br>
                             <div class="row">
-                                <h3>BRONZE SPONSERS</h3>
+                                <h3>BRONZE SPONSORS</h3>
                                 <div class="col-md-3" style="padding-top:50px;">
                                     <img class="sponser-logo" src="./images/mentor.png" alt="mentor"
                                         style="height: 40px;">
